# rust_remote_client

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  proto.rs
